--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chatbox",
   "version": "0.1.0",
+  "engines": {
+    "node": "9.4.0",
+    "npm": "5.6.0"
+  },
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
