--- a/package.json
+++ b/package.json
@@ -7,18 +7,31 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
+    "bcrypt-nodejs": "0.0.3",
+    "cors": "^2.8.4",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^5.0.1",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
+    "react-responsive-modal": "^2.0.0",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
+    "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "node src/server/index.js",
+    "start": "node nodemon src/server/index.js",
     "dev": "concurrently 'npm run react' 'npm run server'",
     "react": "react-scripts start",
     "server": "nodemon ./src/server/index.js",
