--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -37,7 +38,8 @@
     "server": "nodemon ./src/server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "nodemon --watch ./src"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
