--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.4",
     "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.4",
     "mongoose": "^5.0.1",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
@@ -25,6 +26,7 @@
     "react-responsive-modal": "^2.0.0",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.0",
+    "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
