--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "axios": "^0.17.1",
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.4",
+    "elements": "^0.6.0",
+    "emoji-mart": "^2.4.2",
+    "fs": "0.0.1-security",
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.1",
     "morgan": "^1.9.0",
@@ -21,6 +24,7 @@
     "react": "^16.2.0",
     "react-css-transition": "^0.7.4",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.7",
     "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
