--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "emoji-mart": "^2.4.2",
+    "express": "^4.16.0",
     "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.1",
     "morgan": "^1.9.0",
@@ -18,7 +20,7 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.2",
     "react": "^16.2.0",
     "react-css-transition": "^0.7.4",
     "react-dom": "^16.2.0",
@@ -31,6 +33,7 @@
     "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.1.1",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -44,7 +47,13 @@
     "watch": "nodemon --watch ./src"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
     "concurrently": "^3.5.1",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "nodemon": "^1.14.11"
   }
 }
