--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-redux": "^5.0.6",
     "react-responsive-modal": "^2.0.0",
     "react-router": "^3.2.0",
-    "react-scripts": "1.1.0",
+    "react-scripts": "^1.1.5",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
@@ -54,6 +54,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.18.4"
   }
 }
